Changelog
=========

2.13.14 (unreleased)
--------------------

- Substitute catalog entry in UUIDIndex error message.

2.13.13 (2011-05-04)
--------------------

- Optimize `Catalog.updateMetadata` avoiding a `self.uids` lookup and removing
  inline migration code for converting `self.data` from non-IOBTree types.

- In the path index, don't update data if the value hasn't changed.

2.13.12 (2011-05-02)
--------------------

- Optimize DateRangeIndex for better conflict resolution handling. It always
  starts out with storing an IITreeSet of the value instead of special casing
  storing an int for a single value. The `single value as int` optimization
  should be provided via a separate API to be called periodically outside the
  context of a normal request.

- Replaced `weightedIntersection` and `weightedUnion` calls with their
  non-weighted version, as we didn't pass in weights.

2.13.11 (2011-05-02)
--------------------

- Fix possible TypeError in `sortResults` method if only b_start but not b_size
  has been provided.

- Prevent the new UUIDIndex from acquiring attributes via Acquisition.

2.13.10 (2011-04-21)
--------------------

- Handle `TypeErrors` in the KeywordIndex if an indexed attribute is a method
  with required arguments.

- Added reporting of the intersection time of each index' result with the
  result set of the other indexes and consider this time to be part of each
  index time for prioritizing the index.

- Removed tracking of result length from the query plan. The calculation of the
  length of an intermediate index result can itself be expensive.

2.13.9 (2011-04-10)
-------------------

- Added a floor and ceiling value to the date range index. Values outside the
  specified range will be interpreted the same way as passing `None`, i.e.
  `since the beginning of time` and `until the end of it`. This allows the
  index to apply its optimizations, while objects with values outside this